--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
                         authorities of our institute.</p>
                 </li>
                 <li>
-                    <h3>Personal Profile website <a href=""><i class="fa fa-external-link"
+                    <h3>Personal Profile website <a href="https://ksdl1013.github.io/My-Profile/"><i class="fa fa-external-link"
                                 style="font-size:20px"></i></a></h3>
                     <p>Developed the website using HTML, CSS, Bootstrap, JavaScript</p>
                     <p>This website represents my profile.</p>
