--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
                     <p>This website represents my profile.</p>
                 </li>
                 <li>
-                    <h3>Signup Page <a href="https://ksdl1013.github.io/Signup-page/"><i class="fa fa-external-link"
+                    <h3>Signup Page <a href="https://ksdl1013.github.io/Sign-up-page/"><i class="fa fa-external-link"
                                 style="font-size:20px"></i></a></h3>
                     <p>Used HTML, CSS, JavaScript to build webpage</p>
                     <p>This website t consists of various fields to collect data from
